[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_to_markdown"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=5.6.0",
    "nltk>=3.9.1",
    "mdutils",
]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
packages = ["pdf_to_markdown"]

[tool.black]
line-length = 88
target-version = ["py310"]
